--- a/Index.html
+++ b/Index.html
@@ -353,7 +353,7 @@
      <div class="relative w-full max-w-md">
          <div class="absolute -top-6 -left-6 w-16 h-16 rounded-full border-2 border-accent-lime opacity-80 animate-pulse-glow-lime"></div>
          <div class="absolute -bottom-6 -right-6 w-14 h-14 rounded-lg bg-accent-blue/80 opacity-60 transform rotate-12 animate-pulse-glow-blue backdrop-blur-sm"></div>
-         <img src="https://i.postimg.cc/3WMQJBQL/primera.jpg" alt="Mano interactuando con interfaz holográfica de datos representando IA avanzada para negocios" class="rounded-xl shadow-2xl shadow-neon-blue-shadow/50 border-2 border-accent-blue/60 animate-float w-full h-auto object-cover" onerror="this.onerror=null; this.src='https://via.placeholder.com/600x450/0a0f1a/00ffff?text=IA+Futurista';">
+         <img src="https://i.postimg.cc/kG1VtYFy/Gemini-Generated-Image-b3vt9nb3vt9nb3vt.jpg" alt="Mano interactuando con interfaz holográfica de datos representando IA avanzada para negocios" class="rounded-xl shadow-2xl shadow-neon-blue-shadow/50 border-2 border-accent-blue/60 animate-float w-full h-auto object-cover" onerror="this.onerror=null; this.src='https://via.placeholder.com/600x450/0a0f1a/00ffff?text=IA+Futurista';">
 
      </div>
  </div>
@@ -393,7 +393,7 @@
 
                     <div class="bg-primary-dark p-7 rounded-xl shadow-lg border border-accent-lime/30 hover:border-accent-lime transition duration-300 fade-in-initial" style="animation-delay: 0.15s;">
                         <div class="flex items-center mb-5">
-                            <div class="w-14 h-14 rounded-full bg-gradient-to-r from-accent-blue to-accent-lime flex items-center justify-center mr-5 text-primary-dark shadow-neon-lime flex-shrink-0">
+                            <div class="w-14 h-14 rounded-full bg-accent-lime shadow-neon-lime flex items-center justify-center mr-5 text-black shadow-md flex-shrink-0">
                                 <i class="fas fa-eye text-2xl"></i>
                             </div>
                             <h3 class="text-xl lg:text-2xl font-bold text-white">Nuestra Visión</h3>
@@ -403,9 +403,9 @@
                         </p>
                     </div>
 
-                     <div class="bg-primary-dark p-7 rounded-xl shadow-lg border border-gray-600/30 hover:border-gray-500 transition duration-300 fade-in-initial" style="animation-delay: 0.3s;">
+                     <div class="bg-primary-dark p-7 rounded-xl shadow-lg border border-accent-blue/30 hover:border-accent-blue transition duration-300 fade-in-initial">
                          <div class="flex items-center mb-5">
-                             <div class="w-14 h-14 rounded-full bg-accent-lime shadow-neon-lime flex items-center justify-center mr-5 text-black shadow-md flex-shrink-0">
+                             <div class="w-14 h-14 rounded-full bg-accent-blue shadow-neon-blue flex items-center justify-center mr-5 text-black shadow-md flex-shrink-0">
                                  <i class="fas fa-chart-line text-2xl"></i>
                              </div>
                              <h3 class="text-xl lg:text-2xl font-bold text-white">Nuestro Impacto</h3>
