--- a/Index.html
+++ b/Index.html
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
 <html lang="es" class="dark">
 <head>
+<link rel="icon" type="image/jpeg" href="https://i.postimg.cc/1X9HZBPZ/logox2.jpg">
+    <link rel="apple-touch-icon" href="https://i.postimg.cc/1X9HZBPZ/logox2.jpg">
+
+    <meta property="og:title" content="IA Aconcagua - Automatiza Hoy, Lidera Mañana | Soluciones IA">
+    <meta property="og:description" content="Soluciones de inteligencia artificial de vanguardia desde Chile para el mundo. Automatiza hoy, lidera mañana.">
+    <meta property="og:image" content="https://i.postimg.cc/1X9HZBPZ/logox2.jpg">
+    <meta property="og:url" content="https://iaaconcagua.netlify.app/"> <meta property="og:type" content="website">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="IA Aconcagua - Automatiza Hoy, Lidera Mañana | Soluciones IA">
+    <meta name="twitter:description" content="Soluciones de inteligencia artificial de vanguardia desde Chile para el mundo. Automatiza hoy, lidera mañana.">
+    <meta name="twitter:image" content="https://i.postimg.cc/1X9HZBPZ/logox2.jpg">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IA Aconcagua - Automatiza Hoy, Lidera Mañana | Soluciones IA</title>
