--- a/Index.html
+++ b/Index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="es" class="dark">
 <head>
-<link rel="icon" type="image/jpeg" href="https://i.postimg.cc/1X9HZBPZ/logox2.jpg">
-    <link rel="apple-touch-icon" href="https://i.postimg.cc/1X9HZBPZ/logox2.jpg">
+<link rel="icon" type="image/jpeg" href="https://i.postimg.cc/bYbJ1Tpg/logo-grande.jpg">
+    <link rel="apple-touch-icon" href="https://i.postimg.cc/bYbJ1Tpg/logo-grande.jpg.jpg">
 
     <meta property="og:title" content="IA Aconcagua - Automatiza Hoy, Lidera Mañana | Soluciones IA">
     <meta property="og:description" content="Soluciones de inteligencia artificial de vanguardia desde Chile para el mundo. Automatiza hoy, lidera mañana.">
-    <meta property="og:image" content="https://i.postimg.cc/1X9HZBPZ/logox2.jpg">
+    <meta property="og:image" content="https://i.postimg.cc/bYbJ1Tpg/logo-grande.jpg.jpg">
     <meta property="og:url" content="https://iaaconcagua.netlify.app/"> <meta property="og:type" content="website">
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="IA Aconcagua - Automatiza Hoy, Lidera Mañana | Soluciones IA">
     <meta name="twitter:description" content="Soluciones de inteligencia artificial de vanguardia desde Chile para el mundo. Automatiza hoy, lidera mañana.">
-    <meta name="twitter:image" content="https://i.postimg.cc/1X9HZBPZ/logox2.jpg">
+    <meta name="twitter:image" content="https://i.postimg.cc/bYbJ1Tpg/logo-grande.jpg.jpg">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IA Aconcagua - Automatiza Hoy, Lidera Mañana | Soluciones IA</title>
@@ -285,7 +285,7 @@
         <div class="flex justify-between items-center">
             <a href="#inicio" class="flex items-center space-x-3 group">
                 <div class="logo-container">
-     <img src="https://i.postimg.cc/1X9HZBPZ/logox2.jpg" alt="IA Aconcagua Logo Futurista" 
+     <img src="https://i.postimg.cc/Tw3Vp4Zt/logo2.jpg" alt="IA Aconcagua Logo Futurista" 
           class="logo-img h-16 w-16 object-cover rounded-full mr-2"> 
           </div>
                 <span class="text-2xl font-bold font-orbitron text-white">IA <span class="gradient-text-neon group-hover:brightness-125 transition">Aconcagua</span></span>
@@ -886,7 +886,7 @@
                 <div>
                     <div class="flex items-center space-x-3 mb-5">
                          <div class="logo-container h-10">
-                             <img src="https://i.postimg.cc/1X9HZBPZ/logox2.jpg" alt="IA Aconcagua Logo Footer" class="logo-img h-full">
+                             <img src="https://i.postimg.cc/Tw3Vp4Zt/logo2.jpg" alt="IA Aconcagua Logo Footer" class="logo-img h-full">
                          </div>
                          <span class="text-xl font-bold font-orbitron text-white">IA <span class="gradient-text-neon">Aconcagua</span></span>
                     </div>
