--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,7 @@
 
     <meta property="og:title" content="IA Aconcagua - Automatiza Hoy, Lidera Mañana | Soluciones IA">
     <meta property="og:description" content="Soluciones de inteligencia artificial de vanguardia desde Chile para el mundo. Automatiza hoy, lidera mañana.">
-    <meta property="og:image" content="https://i.postimg.cc/bYbJ1Tpg/logo-grande.jpg.jpg">
+    <meta property="og:image" content="https://i.postimg.cc/Tw3Vp4Zt/logo2.jpg">
     <meta property="og:url" content="https://iaaconcagua.netlify.app/"> <meta property="og:type" content="website">
 
     <meta name="twitter:card" content="summary_large_image">
